Ajustes para inclusão de tabela do estoque, e menu edição e excluir

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<p-toast [breakpoints]="{ '767px': { width: '90%', right: '0'} }" position="bottom-center" key="br" />
+<p-toast position="top-right" key="br" />
