--- a/src/app/components/cards/card-storage/card-storage.component.html
+++ b/src/app/components/cards/card-storage/card-storage.component.html
@@ -12,5 +12,5 @@
     </div>
 </section>
 <footer class="card-footer d-flex justify-content-end">
-    <span class="fw-semibold fs-12">{{price}}</span>
+    <span class="d-flex align-items-center fw-semibold fs-12">{{price}}</span>
 </footer>
