--- a/src/app/components/modals/modal-base/modal-base.component.html
+++ b/src/app/components/modals/modal-base/modal-base.component.html
@@ -1,5 +1,5 @@
 <header class="card-header d-flex justify-content-between align-items-center">
-    <h5 class="card-title">{{title()}}</h5>
+    <h5 class="card-title fs-11">{{title()}}</h5>
     <button type="button" class="btn-close" (click)="closeModal()"></button>
 </header>
 <ng-content></ng-content>
