--- a/src/app/components/buttons/button-default/button-default.component.scss
+++ b/src/app/components/buttons/button-default/button-default.component.scss
@@ -4,7 +4,7 @@ button {
 }
 
 button:hover, button:active {
-    background-color: var(--dark);
+    background-color: var(--colorBgButtons);
     color: var(--colorTextButons);
     transition: 0.3s;
     border: none !important;
