--- a/src/app/components/buttons/button-menu-dashboard/button-menu-dashboard.component.html
+++ b/src/app/components/buttons/button-menu-dashboard/button-menu-dashboard.component.html
@@ -1,3 +1,3 @@
-<button class="btn w-150px h-150px" (click)="goTo()">
+<button class="btn w-100 w-lg-150px h-lg-150px" (click)="goTo()">
     <ng-content></ng-content>
 </button>
