--- a/src/app/components/header-pages/header-pages.component.html
+++ b/src/app/components/header-pages/header-pages.component.html
@@ -2,3 +2,6 @@
     <i class="bi bi-chevron-left fs-13"></i>
 }
 <h1 class="fw-medium fs-13 m-0">{{title()}}</h1>
+
+<ng-content select="[contentButtonChangeStorage]"></ng-content>
+<ng-content select="[buttonGeneral]"></ng-content>
