--- a/src/assets/sass/utilities.scss
+++ b/src/assets/sass/utilities.scss
@@ -21,6 +21,17 @@ $utilities-bg-colors-light: (
   "dark": $dark-light
 );
 
+$grid-breakpoints: (
+  xs: 0,
+  sm: 480px,
+  md: 768px,
+  lg: 1024px,
+  xl: 1280px,
+  xxl: 1536px,
+  xxxl: 1920px
+);
+
+
 $custom-widths-height: (
     10px: 10px,
     20px: 20px,
