--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 // Sobrescreva as variáveis antes de importar o Bootstrap
 
-/* Tema visual — escolha o que quiser, exemplo: Lara Light Blue */
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-
-/* Estilos base do PrimeNG (necessário) */
-@import "primeng/resources/primeng.css";
-
-/* Ícones usados pelo PrimeNG */
-@import "primeicons/primeicons.css";
+// @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 @import './assets/sass/custom.scss';
 
@@ -20,3 +13,15 @@ body {
 
 @import "bootstrap/scss/bootstrap";
 @import 'bootstrap/scss/bootstrap';
+
+/* Tema visual — escolha o que quiser, exemplo: Lara Light Blue */
+
+
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+
+@import "primeng/resources/primeng.css";
+
+/* Ícones usados pelo PrimeNG */
+@import "primeicons/primeicons.css";
+/* Estilos base do PrimeNG (necessário) */
+
